--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -11,6 +11,16 @@
 </p>
 
 <p>
+  <b>Sector</b><br>
+  <%= @company.sector %>
+</p>
+
+<p>
+  <b>Industry</b><br>
+  <%= @company.industry %>
+</p>
+
+<p>
   <b>Exchange</b><br>
   <%= @company.exchange %>
 </p>
@@ -23,6 +33,11 @@
 <p>
   <b>Investment blurb</b><br>
   <%= @company.investment_blurb %>
+</p>
+
+<p>
+  <b>Big dividends</b><br>
+  <%= @company.big_dividends %>
 </p>
 
 <div class="form-actions">
