extracted sector and industry; need to link screens; add widgets (i.e. for showing charts, etc)

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -16,17 +16,11 @@
       </div>
     </div>
 
+    <%# TODO: create a dropdown of sector/industry mapping to industry_id(s) %>
     <div class="control-group">
-      <%= f.label :sector, :class => 'control-label' %>
+      <%= f.label :industry_id, :class => 'control-label' %>
       <div class="controls">
-        <%= f.text_field :sector, :class => 'text_field' %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <%= f.label :industry, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :industry, :class => 'text_field' %>
+        <%= f.text_field :industry_id, :class => 'text_field' %>
       </div>
     </div>
 
