--- a/app/views/fundamentals_histories/_form.html.erb
+++ b/app/views/fundamentals_histories/_form.html.erb
@@ -80,6 +80,13 @@
       </div>
     </div>
 
+    <div class="control-group">
+      <%= f.label :collected_on, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :collected_on, :class => 'text_field' %>
+      </div>
+    </div>
+
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to 'Cancel', company_fundamentals_histories_path(@company), :class => 'btn' %>
