--- a/app/views/fundamentals_histories/index.html.erb
+++ b/app/views/fundamentals_histories/index.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th>ID</th>
       <th>Company</th>
-      <th>Created at</th>
+      <th>Collected on</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -13,7 +13,7 @@
       <tr>
         <td><%= fundamentals_history.id %></td>
         <td><%= link_to fundamentals_history.company.name, company_fundamentals_history_path(@company, fundamentals_history) %></td>
-        <td><%= fundamentals_history.created_at %></td>
+        <td><%= fundamentals_history.collected_on %></td>
         <td>
           <%= link_to 'Edit', edit_company_fundamentals_history_path(@company, fundamentals_history), :class => 'btn btn-mini' %>
           <%= link_to 'Destroy', company_fundamentals_history_path(@company, fundamentals_history), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
