--- a/app/views/fundamentals_histories/show.html.erb
+++ b/app/views/fundamentals_histories/show.html.erb
@@ -50,6 +50,11 @@
   <%= @fundamentals_history.fifty_two_wk_low %>
 </p>
 
+<p>
+  <b>Collected on</b><br>
+  <%= @fundamentals_history.collected_on %>
+</p>
+
 <div class="form-actions">
   <%= link_to 'Back', company_fundamentals_histories_path(@company), :class => 'btn'  %>
   <%= link_to 'Edit', edit_company_fundamentals_history_path(@company, @fundamentals_history), :class => 'btn' %>
